# ServiceHub

./: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  seed.py
backend/: docker-compose.yaml  pyproject.toml
backend/app/: main.py  routers.py
backend/app/api_v1/: __init__.py
backend/app/api_v1/companies/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/customers/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/delivery/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/orders/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/service_requests/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/task/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/users/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/work_orders/: crud.py  dependencies.py  shemas.py  views.py
backend/app/api_v1/workers/: crud.py  shemas.py  views.py
backend/app/core/: __init__.py  auth_utils.py  config.py
backend/app/database/models/: __init__.py  base.py  companies.py  customers.py  db_helper.py  dilivery.py  orders.py  service_request.py  tasks.py  users.py  (+2 more)
backend/app/render/: __init__.py  login.py  main.py  profile.py  register.py
frontend/static/: style.css
frontend/static/css/: login.css  register.css  style.css
frontend/static/js/: company_profile.js  main.js  profile.js  register.js
frontend/style/: style.css
frontend/template/: company_profile.html  index.html  login.html  main.html  profile.html  register.html
